<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.ForgetPasswordFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.mylogintest.viewmodel.ForgetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvForgetPassword_f_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/txtForgetPassword_e"
            android:textColor="@color/purple_700"
            android:textColorHighlight="@color/black"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etAccount_f_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/txtAccount"
            app:layout_constraintEnd_toStartOf="@+id/btVerify_f_p"
            app:layout_constraintHorizontal_bias="0.032"
            app:layout_constraintStart_toStartOf="@+id/tvForgetPassword_f_p"
            app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword_f_p" />

        <Button
            android:id="@+id/btVerify_f_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/txtVerify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword_f_p" />

        <EditText
            android:id="@+id/etVerificationCode_f_p"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/txtVerificationCode"
            app:layout_constraintEnd_toEndOf="@+id/etAccount_f_p"
            app:layout_constraintStart_toStartOf="@+id/etAccount_f_p"
            app:layout_constraintTop_toBottomOf="@+id/etAccount_f_p" />

        <EditText
            android:id="@+id/etPassword_f_p"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/txtPassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/btVerify_f_p"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/etVerificationCode_f_p"
            app:layout_constraintTop_toBottomOf="@+id/etVerificationCode_f_p" />

        <EditText
            android:id="@+id/etPasswordAgain_f_p"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/txtPasswordAgain"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/etPassword_f_p"
            app:layout_constraintStart_toStartOf="@+id/etPassword_f_p"
            app:layout_constraintTop_toBottomOf="@+id/etPassword_f_p" />

        <Button
            android:id="@+id/btSubmit_f_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/txtSubmit"
            app:layout_constraintEnd_toEndOf="@+id/tvResult_f_p"
            app:layout_constraintStart_toStartOf="@+id/tvResult_f_p"
            app:layout_constraintTop_toBottomOf="@+id/tvResult_f_p" />

        <TextView
            android:id="@+id/tvResult_f_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/etPasswordAgain_f_p"
            app:layout_constraintStart_toStartOf="@+id/etPasswordAgain_f_p"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordAgain_f_p" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>