<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.mylogintest.viewmodel.LoginSignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.LoginSignUpFragment">

        <TextView
            android:id="@+id/tvLogo_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/txtBagChance"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btSignUp_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/txtSignUp"
            app:layout_constraintEnd_toEndOf="@+id/tvLogo_h"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/tvLogo_h"
            app:layout_constraintTop_toBottomOf="@+id/tvLogo_h" />

        <Button
            android:id="@+id/btLogin_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txtLogin"
            app:layout_constraintEnd_toEndOf="@+id/btSignUp_h"
            app:layout_constraintStart_toStartOf="@+id/btSignUp_h"
            app:layout_constraintTop_toBottomOf="@+id/btSignUp_h" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>